tests/data/placebo/test_security_group_unused/batch.DescribeComputeEnvironments_1.json
{
    "status_code": 200,
    "data": {
        "ResponseMetadata": {},
        "computeEnvironments": []
    }
}
