tests/data/placebo/test_security_group_unused/ec2.DescribeSecurityGroupReferences_1.json
{
    "status_code": 200, 
    "data": {
        "SecurityGroupReferenceSet": [], 
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "0c24f2e7-c862-4832-ac34-7983654b7214", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Wed, 24 Aug 2016 15:11:25 GMT"
            }
        }
    }
}
