tests/data/placebo/test_security_group_unused/events.ListEventBuses_1.json
{
    "status_code": 200,
    "data": {
        "EventBuses": [
            {
                "Name": "default",
                "Arn": "arn:aws:events:us-west-1:644160558196:event-bus/default"
            }
        ],
        "ResponseMetadata": {}
    }
}
