tests/data/placebo/test_security_group_unused/lambda.ListTags_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "05eac87e-2771-11e7-b9ab-7d2494e890ee", 
            "HTTPHeaders": {
                "date": "Sat, 22 Apr 2017 15:33:23 GMT", 
                "x-amzn-requestid": "05eac87e-2771-11e7-b9ab-7d2494e890ee", 
                "content-length": "30", 
                "content-type": "application/json", 
                "connection": "keep-alive"
            }
        }, 
        "Tags": {
            "Language": "Python"
        }
    }
}
